--- a/static/styles_see_clientes.css
+++ b/static/styles_see_clientes.css
@@ -174,3 +174,23 @@ th {
 .delete-button:hover {
     background-color: #D9362C;
 }
+
+.flash-messages {
+    margin-bottom: 20px;
+}
+
+.flash {
+    padding: 10px;
+    border-radius: 4px;
+    margin-bottom: 10px;
+}
+
+.flash.success {
+    background-color: #d4edda;
+    color: #155724;
+}
+
+.flash.error {
+    background-color: #f8d7da;
+    color: #721c24;
+}
