--- a/templates/see_clientes.html
+++ b/templates/see_clientes.html
@@ -14,6 +14,15 @@
     <a href="{{ url_for('clientes.add_cliente') }}" class="button back-button">Volver</a>
     <div class="container">
         <h1>Clientes Registrados</h1>
+        {% with messages = get_flashed_messages(with_categories=True) %}
+          {% if messages %}
+            <div class="flash-messages">
+                {% for category, message in messages %}
+                    <div class="flash {{ category }}">{{ message }}</div>
+                {% endfor %}
+            </div>
+          {% endif %}
+        {% endwith %}
         <form action="{{ url_for('clientes.see_clientes') }}" method="post" class="search-form">
             <input type="text" name="search" placeholder="Buscar clientes..." value="{{ search_query }}">
             <button type="submit" class="button">Buscar</button>
