--- a/templates/see_products.html
+++ b/templates/see_products.html
@@ -14,6 +14,16 @@
     <a href="{{ url_for('add_product') }}" class="button back-button">Volver</a>
     <div class="container">
         <h1>Productos Disponibles</h1>
+        {% with messages = get_flashed_messages(with_categories=True) %}
+          {% if messages %}
+            <div class="flash-messages">
+                {% for category, message in messages %}
+                    <div class="flash {{ category }}">{{ message }}</div>
+                {% endfor %}
+            </div>
+          {% endif %}
+        {% endwith %}
+
         <form action="{{ url_for('see_products') }}" method="post" class="search-form">
             <input type="text" name="search" placeholder="Buscar productos..." value="{{ search_query }}">
             <button type="submit" class="button">Buscar</button>
