--- a/templates/see_ventas.html
+++ b/templates/see_ventas.html
@@ -6,11 +6,59 @@
     <title>Ver Ventas</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='styles_see_ventas.css') }}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <script src="{{ url_for('static', filename='js/filtro.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/menu_toggle.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/order_options.js') }}"></script>
 </head>
 <body>
     <a href="{{ url_for('dashboard') }}" class="button back-button">Volver</a>
     <div class="container">
         <h1>Ventas Realizadas</h1>
+        <!-- Formulario de búsqueda y filtros -->
+        <form action="{{ url_for('ventas.see_ventas') }}" method="post" class="search-form">
+            <input type="text" name="search" placeholder="Buscar ventas..." value="{{ search_query }}">
+            <button type="submit" class="button">Buscar</button>
+            <button type="button" class="button" onclick="toggleFilters()">Filtros Adicionales</button>
+            <button type="button" class="button" onclick="showOrderOptions()">Ordenar</button>
+        </form>
+        
+        <div id="additionalFilters" style="display: none;">
+            <form action="{{ url_for('ventas.see_ventas') }}" method="post" class="filter-form">
+                <div>
+                    <label for="cliente">Cliente:</label>
+                    <input type="text" id="cliente" name="cliente" value="{{ filters['cliente'] }}">
+                </div>
+                <div>
+                    <label for="producto">Producto:</label>
+                    <input type="text" id="producto" name="producto" value="{{ filters['producto'] }}">
+                </div>
+                <div>
+                    <label for="color">Color:</label>
+                    <input type="text" id="color" name="color" value="{{ filters['color'] }}">
+                </div>
+                <div>
+                    <label for="talla">Talla:</label>
+                    <input type="number" step="0.1" id="talla" name="talla" value="{{ filters['talla'] }}">
+                </div>
+                <div>
+                    <label for="tipo">Tipo:</label>
+                    <select id="tipo" name="tipo" required>
+                        <option value="Deportivo" {% if filters['tipo'] == 'Deportivo' %}selected{% endif %}>Deportivo</option>
+                        <option value="Piso" {% if filters['tipo'] == 'Piso' %}selected{% endif %}>Piso</option>
+                    </select>
+                </div>
+                <button type="submit" class="button">Aplicar Filtros</button>
+            </form>
+        </div>
+        
+        <div id="order-options" style="display:none;">
+            <a href="{{ url_for('ventas.see_ventas', search_query=search_query, cliente=filters['cliente'], producto=filters['producto'], color=filters['color'], talla=filters['talla'], tipo=filters['tipo'], order='precio_asc') }}" class="button">Precio más bajo <i class="fas fa-arrow-down"></i></a>
+            <a href="{{ url_for('ventas.see_ventas', search_query=search_query, cliente=filters['cliente'], producto=filters['producto'], color=filters['color'], talla=filters['talla'], tipo=filters['tipo'], order='precio_desc') }}" class="button">Precio más alto <i class="fas fa-arrow-up"></i></a>
+            <a href="{{ url_for('ventas.see_ventas', search_query=search_query, cliente=filters['cliente'], producto=filters['producto'], color=filters['color'], talla=filters['talla'], tipo=filters['tipo'], order='fecha_asc') }}" class="button">Fecha más antigua <i class="fas fa-arrow-down"></i></a>
+            <a href="{{ url_for('ventas.see_ventas', search_query=search_query, cliente=filters['cliente'], producto=filters['producto'], color=filters['color'], talla=filters['talla'], tipo=filters['tipo'], order='fecha_desc') }}" class="button">Fecha más reciente <i class="fas fa-arrow-up"></i></a>
+        </div>
+
+        <!-- Tabla de ventas -->
         <table>
             <thead>
                 <tr>
@@ -34,13 +82,13 @@
                     <td>{{ venta.marca }} {{ venta.modelo }}</td>
                     <td>{{ venta.color }}</td>
                     <td>{{ venta.talla }}</td>
-                    <td>{{ venta.precio}}</td>
-                    <td>{{ venta.tipo}}</td>
+                    <td>{{ venta.precio }}</td>
+                    <td>{{ venta.tipo }}</td>
                     <td>{{ venta.Cantidad }}</td>
                     <td>{{ venta.Total }}</td>
                     <td>{{ venta.MetodoPago }}</td>
                     <td>{{ venta.Fecha }}</td>
-                    <td><img src="{{ url_for('static', filename='images/' + venta.imagen_nombre) }}"></td>
+                    <td><img src="{{ url_for('static', filename='images/' ~ venta.imagen_nombre) }}"></td>
                 </tr>
                 {% endfor %}
             </tbody>
