--- a/templates/realizar_venta.html
+++ b/templates/realizar_venta.html
@@ -1,4 +1,3 @@
-<!-- templates/realizar_venta.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -54,5 +53,6 @@
             </section>
         </form>
     </div>
+    <script src="{{ url_for('static', filename='js/confirm_venta.js') }}"></script>
 </body>
 </html>
