--- a/static/styles_see_ventas.css
+++ b/static/styles_see_ventas.css
@@ -205,7 +205,7 @@ table th:nth-child(5), table td:nth-child(5) {
 }
 
 table th:nth-child(6), table td:nth-child(6) {
-    width: 100px; /* Ancho para Tipo */
+    width: 50px; /* Ancho para Tipo */
 }
 
 table th:nth-child(7), table td:nth-child(7) {
@@ -221,7 +221,7 @@ table th:nth-child(9), table td:nth-child(9) {
 }
 
 table th:nth-child(10), table td:nth-child(10) {
-    width: 150px; /* Ancho para Fecha */
+    width: 200px; /* Ancho para Fecha */
 }
 
 table th:nth-child(11), table td:nth-child(11) {
@@ -301,3 +301,26 @@ img {
 .show {
     display: block;
 }
+
+/* Estilos para el contenedor de la tabla */
+.table-container {
+    max-height: 500px; /* Ajusta la altura según tus necesidades */
+    overflow-y: auto; /* Permite el desplazamiento vertical */
+    border: 1px solid #ddd;
+    border-radius: 4px;
+}
+
+/* Estilos para la tabla fija en el contenedor */
+.table-container table {
+    width: 100%;
+    border-collapse: collapse;
+    margin: 0; /* Elimina el margen superior e inferior */
+}
+
+.table-container thead th {
+    position: sticky; /* Fija los encabezados en la parte superior */
+    top: 0;
+    background-color: #f2f2f2; /* El mismo color que el fondo de los encabezados */
+    z-index: 1; /* Asegura que los encabezados se superpongan sobre las filas */
+}
+
