--- a/templates/see_ventas.html
+++ b/templates/see_ventas.html
@@ -80,6 +80,7 @@
         </div>
 
         <!-- Tabla de ventas -->
+      <div class="table-container">
         <table>
             <thead>
                 <tr>
@@ -125,6 +126,7 @@
                 {% endfor %}
             </tbody>
         </table>
+      </div>
     </div>
 </body>
 </html>
