--- a/templates/see_products.html
+++ b/templates/see_products.html
@@ -66,6 +66,7 @@
             <a href="{{ url_for('see_products', search_query=search_query, marca=filters['marca'], modelo=filters['modelo'], color=filters['color'], talla=filters['talla'], tipo=filters['tipo'], order='marca_asc') }}" class="button">Marca de la A-Z <i class="fas fa-arrow-down"></i></a>
             <a href="{{ url_for('see_products', search_query=search_query, marca=filters['marca'], modelo=filters['modelo'], color=filters['color'], talla=filters['talla'], tipo=filters['tipo'], order='marca_desc') }}" class="button">Marca de la Z-A <i class="fas fa-arrow-up"></i></a>
         </div>
+      <div class="table-container">
         <table>
             <thead>
                 <tr>
@@ -106,7 +107,8 @@
                 </tr>
                 {% endfor %}
             </tbody>
-        </table>
+         </table>
+       </div>
     </div>
 </body>
 </html>
