--- a/static/styles_see_ventas.css
+++ b/static/styles_see_ventas.css
@@ -336,17 +336,22 @@ img {
     border-radius: 8px;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
     z-index: 9999;
-    padding: 5px; /* Reduce el padding del menú */
-    min-width: 120px; /* Reduce el ancho mínimo del menú */
+    padding: 10px; /* Aumenta el padding del menú */
+    min-width: 160px; /* Ajusta el ancho mínimo del menú */
 }
 
 #order-options a {
     display: block;
-    padding: 8px 12px; /* Ajusta el padding de los enlaces */
+    padding: 12px 16px; /* Ajusta el padding de los enlaces */
     color: #333;
     text-decoration: none;
     border-radius: 4px;
     transition: background-color 0.3s, color 0.3s;
+    margin-bottom: 8px; /* Añade margen inferior entre los enlaces */
+}
+
+#order-options a:last-child {
+    margin-bottom: 0; /* Elimina el margen inferior del último enlace */
 }
 
 #order-options a:hover {
@@ -356,9 +361,4 @@ img {
 
 #order-options .fa-arrow-up, #order-options .fa-arrow-down {
     margin-left: 8px;
-}
-
-/* Estilos adicionales para mejorar la visibilidad */
-#order-options {
-    margin-top: 10px; /* Añadir espacio entre el botón y el menú */
 }
