--- a/templates/see_products.html
+++ b/templates/see_products.html
@@ -11,7 +11,7 @@
     <script src="{{ url_for('static', filename='js/order_options.js') }}"></script>
 </head>
 <body>
-    <a href="{{ url_for('add_product') }}" class="button back-button">Volver</a>
+    <a href="{{ url_for('dashboard') }}" class="button back-button">Volver</a>
     <div class="container">
         <h1>Productos Disponibles</h1>
         {% with messages = get_flashed_messages(with_categories=True) %}
