--- a/templates/see_products.html
+++ b/templates/see_products.html
@@ -77,7 +77,7 @@
                     <th>Precio</th>
                     <th>Talla</th>
                     <th>Tipo</th>
-                    <th>Imagen</th>
+                    <th>Foto</th>
                     <th></th> <!-- Nueva columna para el menú desplegable -->
                 </tr>
             </thead>
