--- a/templates/see_ventas.html
+++ b/templates/see_ventas.html
@@ -94,7 +94,7 @@
                     <th>Precio Total</th>
                     <th>Forma de Pago</th>
                     <th>Fecha</th>
-                    <th>Imagen</th>
+                    <th>Foto</th>
                     <th></th>
                 </tr>
             </thead>
