--- a/static/styles_see_ventas.css
+++ b/static/styles_see_ventas.css
@@ -362,3 +362,15 @@ img {
 #order-options .fa-arrow-up, #order-options .fa-arrow-down {
     margin-left: 8px;
 }
+/* Agrega estos estilos al final del archivo */
+.results-message {
+    font-size: 1.2em;
+    font-weight: bold;
+    color: #333; /* Color del texto */
+    margin: 20px 0; /* Espacio arriba y abajo del mensaje */
+    padding: 10px;
+    border: 1px solid #ddd; /* Borde alrededor del mensaje */
+    border-radius: 5px; /* Bordes redondeados */
+    background-color: #f9f9f9; /* Fondo del mensaje */
+    text-align: center; /* Centrar el texto */
+}
