--- a/templates/see_ventas.html
+++ b/templates/see_ventas.html
@@ -14,6 +14,10 @@
     <a href="{{ url_for('dashboard') }}" class="button back-button">Volver</a>
     <div class="container">
         <h1>Ventas Realizadas</h1>
+         <!-- Mensaje de número de resultados encontrados -->
+         <p class="results-message">{{ ventas_count }} resultado{% if ventas_count != 1 %}s{% endif %} encontrado{% if ventas_count != 1 %}s{% endif %}</p>
+
+
         {% with messages = get_flashed_messages(with_categories=True) %}
           {% if messages %}
           <div class="flash-messages">
