cambios menores en los estilos del dashboard, cambio de letra

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -38,13 +38,13 @@
             <div class="grid-item">
                 <a href="{{ url_for('ventas.see_ventas') }}">
                     <h3>Ventas</h3>
-                    <p>Ver los regirstros de las ventas</p>
+                    <p>Ver las ventas realizadas</p>
                 </a>
             </div>
             <div class="grid-item">
                 <a href="{{ url_for('see_products') }}">
                     <h3>Ventas</h3>
-                    <p>Hacer una venta</p>
+                    <p> Realizar una venta </p>
                 </a>
             </div>
         </div>
