--- a/templates/see_clientes.html
+++ b/templates/see_clientes.html
@@ -11,7 +11,7 @@
     <script src="{{ url_for('static', filename='js/order_options.js') }}"></script>
 </head>
 <body>
-    <a href="{{ url_for('clientes.add_cliente') }}" class="button back-button">Volver</a>
+    <a href="{{ url_for('dashboard') }}" class="button back-button">Volver</a>
     <div class="container">
         <h1>Clientes Registrados</h1>
         <!-- Mensaje de número de resultados encontrados -->
