--- a/templates/see_products.html
+++ b/templates/see_products.html
@@ -9,6 +9,7 @@
     <script src="{{ url_for('static', filename='js/filtro.js') }}"></script>
     <script src="{{ url_for('static', filename='js/menu_toggle.js') }}"></script>
     <script src="{{ url_for('static', filename='js/order_options.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/toggle_visibility.js') }}"></script>
 </head>
 <body>
     <a href="{{ url_for('dashboard') }}" class="button back-button">Volver</a>
@@ -27,12 +28,18 @@
           {% endif %}
         {% endwith %}
 
+       
         <form action="{{ url_for('see_products') }}" method="post" class="search-form">
             <input type="text" name="search" placeholder="Buscar productos..." value="{{ search_query }}">
             <button type="submit" class="button">Buscar</button>
             <button type="button" class="button" onclick="toggleFilters()">Filtros Adicionales</button>
             <button type="button" class="button" onclick="showOrderOptions()">Ordenar</button>
         </form>
+        <div class="toggle-visibility">
+            <button id="toggleVisibilityBtn" onclick="toggleVisibility()">
+                <i id="visibilityIcon" class="fas fa-eye-slash"></i> <!-- Ojo abierto -->
+            </button>
+        </div>  
         <div id="additionalFilters" style="display: none;">
             <form action="{{ url_for('see_products') }}" method="post" class="filter-form">
                 <div>
